tests/macros/tests/ui/err/has-duplicated-properties.stderr
error: duplicate property key: key
 --> tests/ui/err/has-duplicated-properties.rs:3:1
  |
3 | #[trace(properties = { "key": "first", "key": "second" })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
