tests/macros/tests/ui/err/has-duplicated-properties.rs
use fastrace::trace;

#[trace(properties = { "key": "first", "key": "second" })]
fn f() {}

fn main() {}
